# stbracademy-platform

./: .gitignore  package-lock.json  package.json
app/: .env.example  CUSTOMIZATION.md  README.md  package-lock.json  package.json  sanity.config.ts
app/e2e/: pwa.spec.ts
app/messages/: en.json  es.json  pt.json
apps/web/: ARCHITECTURE.md  CMS_GUIDE.md  next.config.js  package-lock.json  package.json  playwright.config.ts  sanity.cli.ts  tailwind.config.ts
onchain-academy/: Anchor.toml  Cargo.toml  README.md  package.json
onchain-academy/programs/onchain-academy/: Cargo.toml
onchain-academy/programs/onchain-academy/src/: errors.rs  events.rs  lib.rs  utils.rs
onchain-academy/programs/onchain-academy/src/instructions/: award_achievement.rs  close_enrollment.rs  complete_lesson.rs  create_achievement_type.rs  create_course.rs  deactivate_achievement_type.rs  enroll.rs  finalize_course.rs  initialize.rs  issue_credential.rs  mod.rs  register_minter.rs  revoke_minter.rs  reward_xp.rs  update_config.rs  update_course.rs  upgrade_credential.rs
onchain-academy/programs/onchain-academy/src/state/: achievement_type.rs  config.rs  course.rs  enrollment.rs  minter_role.rs  mod.rs
onchain-academy/scripts/: check-xp.ts  complete-lesson.ts  create-mock-course.ts  create-mock-track.ts  e2e-flow.ts  enroll.ts  fetch-config.ts  fetch-course.ts  (+4 more)
onchain-academy/tests/rust/: Cargo.toml
onchain-academy/tests/rust/src/: helpers.rs  lib.rs  test_achievement.rs  test_completion.rs  test_course.rs  test_enrollment.rs  test_initialize.rs  test_minter_role.rs  test_utils.rs
onchain-academy/trident-tests/fuzz/: Cargo.toml
onchain-academy/trident-tests/fuzz/fuzz_targets/: fuzz_bitmap.rs  fuzz_state_machine.rs
scripts/: update-program-id.sh
(+152 files in other folders)
